Closed Bug 1782719 Opened 2 years ago Closed 2 years ago

All emails in @yahoo.com and AOL account are marked as junk mails, and mark as not junk immediately changes back to junk

Categories

(Thunderbird :: Filters, defect)

Thunderbird 105
defect

Tracking

(thunderbird_esr102 unaffected, thunderbird105+ fixed)

RESOLVED FIXED
106 Branch
Tracking Status
thunderbird_esr102 --- unaffected
thunderbird105 + fixed

People

(Reporter: litimetal, Assigned: mkmelin)

References

(Regression)

Details

(Keywords: regression, Whiteboard: [regression: TB105])

User Story

https://support.mozilla.org/en-US/questions/1387404
https://support.mozilla.org/en-US/questions/1387386

Attachments

(2 files)

Steps to reproduce:

I'm using Thunderbird Nightly. Current version
105.0a1 (2022-08-01) (64-bit)

Actual results:

In my @yahoo.com account, all emails are marked as junk emails (see attachment)

I checked mail.yahoo.com the emails are in good status

My old emails in my @yahoo.com account are marked as junk as well

My emails in other accounts are not affected

If I click "Not Junk" for an email, it will be marked as junk automatically two seconds later

Application Basics
Name: Thunderbird
Version: 105.0a1
Build ID: 20220801104555
Distribution ID:
Update Channel: nightly
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:105.0) Gecko/20100101 Thunderbird/105.0a1
OS: Windows_NT 10.0 19044

That junk status is Thunderbird local. It works by (your) training of it. Mark as not junk for enough of the ones wrongly marked, and it will learn.

(In reply to Magnus Melin [:mkmelin] from comment #2)

That junk status is Thunderbird local. It works by (your) training of it. Mark as not junk for enough of the ones wrongly marked, and it will learn.

If I click 'Not Junk', the email will be marked as junk again after 2 seconds.

Turning on/off the adaptive junk mail control for this account doesn't help

Do you have an extension active that could interfere? Have you tried the Troubleshoot Mode in Help?

Thanks, Richard,

(In reply to Richard Marti (:Paenglab) from comment #5)

Do you have an extension active that could interfere?

No extensions.

Have you tried the Troubleshoot Mode in Help?
In troubleshoot mode, this issue still exists

(In reply to Zhenbo Li from comment #4)

If I click 'Not Junk', the email will be marked as junk again after 2 seconds.

I recorded my screen to demonstrate it

https://user-images.githubusercontent.com/3221521/182673261-2c64a90e-408c-4019-9394-581cc6b06da3.mp4
(Uploaded by https://github.com/Endle/random_collection/blob/master/README.md)

I can confirm this. All messages in all folders of the Yahoo IMAP account are affected. Messages do not get moved to the Junk/Bulk folder though.
Resetting the training data and subsequently marking messages 'As Not Junk' has no effect. Also happens in safe mode.
When accessing the account via webmail, no messages are marked as junk on the server.
This started about 2 weeks ago with TB105 daily. Other accounts than Yahoo are not affected. I have not tried this with an AOL account though.

Status: UNCONFIRMED → NEW
Ever confirmed: true

I'm experiencing the same issue now that 105 is in beta status. Good news, nothing has been moved to Junk on the server. Non-yahoo accounts are not affected.

AOL accounts are also affected.

Assignee: nobody → mkmelin+mozilla
Status: NEW → ASSIGNED
Keywords: regression
Regressed by: 1782347
Target Milestone: --- → 106 Branch
User Story: (updated)
Summary: All my emails in my @yahoo.com account are marked as junk mails → All emails in @yahoo.com and AOL account are marked as junk mails, and mark as not junk immediately changes back to junk

I have the same or similar issue:
I am currently running the Thunderbird beta version 105.0b1 (64-bit) in Windows 11 pro.

When I get mail for my Yahoo account, all messages have a banner that says "Thunderbird thinks this message is junk mail". I have two other accounts that function properly (gmail and outlook). I cleared the settings for the Yahoo (previously set for adaptive junk mail) junk settings and that did not stop the behavior.

Severity: -- → S2
Whiteboard: [regression: TB105]

The proposed patch looks good to me. But I just wanted to check: Is there an opposite case that also needs to be accounted for? i.e. marking a mail non-junk locally, and picking the right flag to send to the server? (either "NotJunk" or "NonJunk", depending on yahooness)

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/07d0c7302ac1
Don't mark NotJunk flagged mails as junk (e.g. Yahoo.). r=benc

Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED

Comment on attachment 9291677 [details]
Bug 1782719 - Don't mark NotJunk flagged mails as junk (e.g. Yahoo.). r=benc

[Approval Request Comment]
Regression caused by (bug #): bug 1782347
User impact if declined: yahoo/aol - all non-spam marked as junk
Testing completed (on c-c, etc.): just landed on c-c
Risk to taking this patch (and alternatives if risky): very safe

Attachment #9291677 - Flags: approval-comm-beta?

Comment on attachment 9291677 [details]
Bug 1782719 - Don't mark NotJunk flagged mails as junk (e.g. Yahoo.). r=benc

[Triage Comment]
Approved for 105.0b2.

Attachment #9291677 - Flags: approval-comm-beta? → approval-comm-beta+

Thank you! Thank you! Thank you for the junk mail fix.

You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: