Bug 1782719 - Don't mark NotJunk flagged mails as junk (e.g. Yahoo.). r=benc

Differential Revision: https://phabricator.services.mozilla.com/D155667

--HG--
extra : rebase_source : 5333f215f81bc5af2c9bab04ad7560c15039c984